<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/mainBackground"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/main_title"
        android:text="@string/main_title"
        style="@style/AppTextView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <View
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.15"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.70"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/spotify_card"
                    style="@style/AppCardView">
                    <Button
                        android:id="@+id/spotify_app"
                        android:text="@string/spotify_streamer"
                        style="@style/AppButton"/>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/scores_card"
                    android:layout_below="@+id/spotify_card"
                    style="@style/AppCardView">
                    <Button
                        android:id="@+id/scores_app"
                        android:text="@string/scores_app"
                        style="@style/AppButton" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/library_card"
                    android:layout_below="@+id/scores_card"
                    style="@style/AppCardView">
                    <Button
                        android:id="@+id/library_app"
                        android:text="@string/library_app"
                        style="@style/AppButton" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/build_it_bigger_card"
                    android:layout_below="@+id/library_card"
                    style="@style/AppCardView">
                    <Button
                        android:id="@+id/build_it_bigger_app"
                        android:text="@string/build_it_bigger_app"
                        style="@style/AppButton" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/xyz_reader_card"
                    android:layout_below="@+id/build_it_bigger_card"
                    style="@style/AppCardView">
                    <Button
                        android:id="@+id/xyz_reader_app"
                        android:text="@string/xyz_reader_app"
                        style="@style/AppButton" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/capstone_card"
                    android:layout_below="@+id/xyz_reader_card"
                    card_view:cardBackgroundColor="@color/redButton"
                    style="@style/AppCardView">
                    <Button
                        android:id="@+id/capstone_app"
                        android:text="@string/capstone_app"
                        style="@style/AppButton" />
                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.15"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
